Minor fixes (digit separator, updating after changing operator)

--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
         <tbody>
           <tr>
             <td class="right">1 mile minus 1 inch</td>
-            <td>AF, 92B&Prime;</td>
+            <td>AF 92B&Prime;</td>
           </tr>
           <tr>
             <td class="right">1 mile plus 1 inch</td>
-            <td>100, 001&Prime;</td>
+            <td>100 001&Prime;</td>
           </tr>
         </tbody>
       </table>
@@ -186,23 +186,23 @@
         <tbody>
           <tr>
             <td class="right">40, 450 yards</td>
-            <td>MAD, 000&Prime;</td>
+            <td>MAD 000&Prime;</td>
           </tr>
           <tr>
             <td class="right">28, 101 miles</td>
-            <td>LOL00, 000&Prime;</td>
+            <td>LOL00 000&Prime;</td>
           </tr>
           <tr>
             <td class="right">
               Earth's equatorial circumference (24,901.461 miles)
             </td>
-            <td>J7, P51, 110&Prime;F5C29</td>
+            <td>J7 P51 110&Prime;F5C 29</td>
           </tr>
           <tr>
             <td class="right">
               Earth's polar circumference (24,859.734 miles)
             </td>
-            <td>J6J81126&Prime;3D70A</td>
+            <td>J6 J81 126&Prime;3D7 0A4</td>
           </tr>
         </tbody>
       </table>
@@ -223,7 +223,7 @@
             <td class="right">
               36 miles minus <sup>17</sup>/<sub>256</sub> inch
             </td>
-            <td>ZAF, 92B&Prime;EF</td>
+            <td>ZAF 92B&Prime;EF</td>
           </tr>
 
           <tr class="calculator">
