Some further tweaking
Using the <sup> in inline text changed the line-height which was
annoying. Also, I misunderstood `rem`, it doesn't take the 100% viewport
height into account.

--- a/index.html
+++ b/index.html
@@ -287,6 +287,10 @@
             </td>
           </tr>
 
+          <tr>
+            <td colspan="2">=</td>
+          </tr>
+
           <tr class="calculator">
             <td class="right">
               <input
@@ -317,7 +321,7 @@
       <p>
         Note, multiplication and division might not make sense, in that because
         the result is in a different unit, it would need its own number system,
-        say Imperial<sup>2</sup> Base. This only applies when you are
+        say Imperial² Base. This only applies when you are
         multiplying two dimensions together, multiplying a dimension by a scalar
         makes sense (in which case units should be left as inches for the
         scalar).
