--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     />
     <title>Imperial Base</title>
     <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
     <link rel="stylesheet" type="text/css" media="all" href="slides.css" />
   </head>
   <body>
