Lower-case "in" (inches) as "In" can look like "ln"

--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@
                 placeholder="12.34375"
               />
               <select name="unit-0" id="unit-0">
-                <option value="inches">In</option>
-                <option value="feet">Ft</option>
-                <option value="yards">Yd</option>
-                <option value="miles">Mi</option>
+                <option value="inches">in</option>
+                <option value="feet">ft</option>
+                <option value="yards">yd</option>
+                <option value="miles">mi</option>
               </select>
             </td>
             <td>
@@ -274,10 +274,10 @@
                 placeholder="12.34375"
               />
               <select name="unit-1" id="unit-1">
-                <option value="inches">In</option>
-                <option value="feet">Ft</option>
-                <option value="yards">Yd</option>
-                <option value="miles">Mi</option>
+                <option value="inches">in</option>
+                <option value="feet">ft</option>
+                <option value="yards">yd</option>
+                <option value="miles">mi</option>
               </select>
             </td>
             <td>
@@ -303,10 +303,10 @@
                 placeholder="12.34375"
               />
               <select name="unit-2" id="unit-2">
-                <option value="inches">In</option>
-                <option value="feet">Ft</option>
-                <option value="yards">Yd</option>
-                <option value="miles">Mi</option>
+                <option value="inches">in</option>
+                <option value="feet">ft</option>
+                <option value="yards">yd</option>
+                <option value="miles">mi</option>
               </select>
             </td>
             <td>
