Fix missing "v2" in furlongs and miles

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </section>
 
     <section id="furlongs">
-      <h2>Introducing Imperial Base (furlongs)</h2>
+      <h2>Introducing Imperial Base v2 (furlongs)</h2>
       <p>Then 8 furlongs make up a mile!</p>
 
       <table>
@@ -230,7 +230,7 @@
     </section>
 
     <section id="miles">
-      <h2>Introducing Imperial Base (miles)</h2>
+      <h2>Introducing Imperial Base v2 (miles)</h2>
       <p>
         Miles then could just be represented in base 10, but that feels too
         metric. So how about base 36, that combines the base 12 of inches and
@@ -271,7 +271,7 @@
     </section>
 
     <section id="calculator">
-      <h2>Calculator</h2>
+      <h2>Calculator v2</h2>
 
       <table>
         <thead>
